--- a/functions/package.json
+++ b/functions/package.json
@@ -5,7 +5,8 @@
     "cors": "^2.8.4",
     "firebase-admin": "~5.4.0",
     "firebase-functions": "^0.7.1",
-    "isomorphic-fetch": "^2.2.1"
+    "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.19.1"
   },
   "private": true
 }
