--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "4.0.0-beta",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
+    "moment": "^2.19.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-places-autocomplete": "^5.4.3",
