--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
     "react-dom": "^16.0.0",
     "react-places-autocomplete": "^5.4.3",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "popper.js": "^1.12.5",
+    "react-app-rewired": "^1.3.3"
   }
 }
