--- a/functions/package.json
+++ b/functions/package.json
@@ -3,7 +3,7 @@
   "description": "Cloud Functions for Firebase",
   "dependencies": {
     "cors": "^2.8.4",
-    "firebase-admin": "~5.4.0",
+    "firebase-admin": "^5.4.2",
     "firebase-functions": "^0.7.1",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.19.1"
