--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "4.0.0-beta",
+    "firebaseui": "^2.4.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
     "moment": "^2.19.1",
