--- a/functions/package.json
+++ b/functions/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.4",
     "firebase-admin": "^5.4.2",
     "firebase-functions": "^0.7.1",
+    "http-error": "^0.0.6",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.19.1"
   },
